--- a/index.html
+++ b/index.html
@@ -7,8 +7,32 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <h1>Calculator</h1>
         <div class="calculator">
-            
+            <div class="display">0</div>
+            <div class="buttons">
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button data-action="clear">AC</button>
+
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button class="operator" data-action="divide">/</button>
+
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button class="operator" data-action="multiply">x</button>
+
+                <button class="operator">+</button>
+                <button>0</button>
+                <button class="operator">-</button>
+                <button data-action="decimal">.</button>
+
+                <button data-action="calculate">=</button>
+            </div>
         </div>
     </body>
 </html>
