made to look more like a calculator

--- a/index.html
+++ b/index.html
@@ -7,31 +7,30 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Calculator</h1>
         <div class="calculator">
             <div class="display">0</div>
             <div class="buttons">
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button data-action="clear">AC</button>
+                <button class="btn">7</button>
+                <button class="btn">8</button>
+                <button class="btn">9</button>
+                <button class="btn" data-action="clear">AC</button>
 
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button class="operator" data-action="divide">/</button>
+                <button class="btn">4</button>
+                <button class="btn">5</button>
+                <button class="btn">6</button>
+                <button class="operator btn" data-action="divide">/</button>
 
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button class="operator" data-action="multiply">x</button>
+                <button class="btn">1</button>
+                <button class="btn">2</button>
+                <button class="btn">3</button>
+                <button class="operator btn" data-action="multiply">x</button>
 
-                <button class="operator">+</button>
-                <button>0</button>
-                <button class="operator">-</button>
-                <button data-action="decimal">.</button>
+                <button class="operator btn">+</button>
+                <button class="btn">0</button>
+                <button class="operator btn">-</button>
+                <button class="btn" data-action="decimal">.</button>
 
-                <button data-action="calculate">=</button>
+                <button class="calculate" data-action="calculate">=</button>
             </div>
         </div>
     </body>
