--- a/index.html
+++ b/index.html
@@ -5,32 +5,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Calculator</title>
         <link rel="stylesheet" href="styles.css">
+        <script src="main.js" defer></script>
     </head>
     <body>
         <div class="calculator">
             <div class="display">0</div>
-            <div class="buttons">
-                <button class="btn">7</button>
-                <button class="btn">8</button>
-                <button class="btn">9</button>
-                <button class="btn" data-action="clear">AC</button>
-
-                <button class="btn">4</button>
-                <button class="btn">5</button>
-                <button class="btn">6</button>
-                <button class="operator btn" data-action="divide">/</button>
-
-                <button class="btn">1</button>
-                <button class="btn">2</button>
-                <button class="btn">3</button>
-                <button class="operator btn" data-action="multiply">x</button>
-
-                <button class="operator btn">+</button>
-                <button class="btn">0</button>
-                <button class="operator btn">-</button>
-                <button class="btn" data-action="decimal">.</button>
-
-                <button class="calculate" data-action="calculate">=</button>
+            <div class="buttonContainer">
+                <button class="btn clear">AC</button>
+                <button class="btn delete">DEL</button>
+                <button class="btn percent">%</button>
+                <button class="btn operator">/</button>
+                <button class="btn operand">7</button>
+                <button class="btn operand">8</button>
+                <button class="btn operand">9</button>
+                <button class="btn operator">*</button>
+                <button class="btn operand">4</button>
+                <button class="btn operand">5</button>
+                <button class="btn operand">6</button>
+                <button class="btn operator">-</button>
+                <button class="btn operand">1</button>
+                <button class="btn operand">2</button>
+                <button class="btn operand">3</button>
+                <button class="btn operator">+</button>
+                <button id="zero" class="btn operand">0</button>
+                <button class="btn decimal">.</button>
+                <button class="btn equal">=</button>
             </div>
         </div>
     </body>
